@@ -60,6 +60,7 @@
 # CONFIG_ARCH_STACKDUMP - Do stack dumps after assertions
 # CONFIG_ARCH_BOOTLOADER - Set if you are using a bootloader.
 # CONFIG_ARCH_LEDS -  Use LEDs to show state. Unique to board architecture.
+# CONFIG_ARCH_BUTTONS -  Enable support for buttons. Unique to board architecture.
 # CONFIG_ARCH_CALIBRATION - Enables some build in instrumentation that
 #   cause a 100 second delay during boot-up.  This 100 second delay
 #   serves no purpose other than it allows you to calibrate
@@ -83,6 +84,7 @@ CONFIG_ARCH_INTERRUPTSTACK=n
 CONFIG_ARCH_STACKDUMP=y
 CONFIG_ARCH_BOOTLOADER=n
 CONFIG_ARCH_LEDS=y
+CONFIG_ARCH_BUTTONS=n
 CONFIG_ARCH_CALIBRATION=n
 
 #
